welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	if (estFaceMur() && getDirection() == Direction.EST){
        ^SnakeBuggle:15: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return false
  ^