welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	serpent()
}

def arriver(){
	if (estFaceMur() && getDirection() == Direction.EST){
    gauche();
    if (estFaceMur()){
      droite()
      return true
    }
    else{
      return false
    }
  }
}

